--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,4 @@
 set-window-option -g mode-keys vi
 set-option -sg escape-time 0
+#bind-key d run-shell -b "if tmux ls | grep -m1 \"^#{session_name}:.*group\"; then  tmux kill-session; else; tmux detach; fi" 
+bind-key d run-shell "tmux-detach-or-kill #{session_name}"
