--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,10 @@
 set-window-option -g mode-keys vi
 set-option -sg escape-time 0
-#bind-key d run-shell -b "if tmux ls | grep -m1 \"^#{session_name}:.*group\"; then  tmux kill-session; else; tmux detach; fi" 
+#bind-key d run-shell -b "if tmux ls | grep -m1 \"^#{session_name}:.*group\"; then  tmux kill-session; else; tmux detach; fi"
 bind-key d run-shell "tmux-detach-or-kill #{session_name}"
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 # move x clipboard into tmux paste buffer
 bind < run "xsel -ob | tmux load-buffer - ; tmux paste-buffer "
 # move tmux copy buffer into x clipboard
 bind > run "( tmux show-buffer | xsel -bi ) && tmux display-message \"ok!\""
+set-option -g history-limit 100000
